// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiVerticalRectSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="65.33333333333331"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="0"
              y="130.66666666666669"
            />
            <rect
              height="196"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="596"
              x="0"
              y="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiVerticalRectSeries is rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="65.33333333333331"
              style="opacity:1;stroke:white;fill:#00B3A4;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="0"
              y="130.66666666666669"
            />
            <rect
              height="196"
              style="opacity:1;stroke:white;fill:#00B3A4;stroke-width:1;rx:2px;ry:2px"
              width="596"
              x="0"
              y="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiVerticalRectSeries renders stacked vertical histogram 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="98"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="98"
            />
            <rect
              height="58.80000000000001"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="137.2"
            />
          </g>
        </g>
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="39.19999999999999"
              style="opacity:1;stroke:white;fill:#00ff00;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="58.80000000000001"
            />
            <rect
              height="137.2"
              style="opacity:1;stroke:white;fill:#00ff00;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
